# theRush

./: .gitignore  AssetsImport.vcxproj  CMakeLists.txt  R2-Info.plist  R2.sln  R2.vcproj  R2.vcxproj  makefile  resource.h  therush.rc
Assets/: Objects3D.ase  Objets3D.max  Station.blend  bonus.raw  city.ASE  cover.max  slices.ase  slices.cpp  slices.max  sparkle.dds  startup_pylon.max  tanker.ASE  tanker.max  texts.ASE  texts.max
English.lproj/: MainMenu.xib
Installs/: InstallScript_Release.iss  InstallScript_Retail.iss
R2.xcodeproj/: project.pbxproj  sii.mode1v3  sii.pbxuser
docs/: R2.mm  R2Flux.dia
sources/: 3DSLoader.cpp  3DSLoader.h  3ds.cpp  3ds.h  AssetsImport.cpp  IPhysicShip.h  ImageManipulator.cpp  ImageManipulator.h  JSON_serializer.cpp  JSON_serializer.h  ZShipPhysics.cpp  ZShipPhysics.h  audio.cpp  audio.h  bonus.cpp  bonus.h  camera.cpp  camera.h  content.cpp  content.h  core_memory.cpp  core_memory.h  core_smartpointer.h  debug_assert.cpp  debug_assert.h  debug_breakpoint.cpp  debug_breakpoint.h  debug_common.cpp  debug_common.h  define_macros.h  define_platform.h  define_types.h  edit.cpp  fx.cpp  fx.h  game.cpp  game.h  gui.cpp  gui.h  include_Bullet.h  (+32 more)
sources/GamePhysics/: GamePhysics.cpp  GamePhysics.h  GamePhysics.vcxproj  GamePhysics.vcxproj.filters  stdafx.cpp  stdafx.h
